# turboscraper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: crawler.rs  errors.rs  lib.rs  main.rs  spider.rs
src/core/: crawler.rs  errors.rs  mod.rs  spider.rs
src/core/crawler/: crawler.rs  tests.rs
src/core/crawling/: crawler.rs  mod.rs  tests.rs
src/core/retry/: impl.rs  mock_scraper.rs  mod.rs  retry.rs  tests.rs  types.rs  utils.rs
src/examples/: example_spider.rs  mod.rs
src/examples/example_spiders/: mod.rs
src/examples/example_spiders/beginner/: mod.rs  simple_spider.rs
src/http/: mod.rs  request.rs  response.rs
src/parser/: base.rs  mod.rs
src/parser/html/: html_parser.rs  mod.rs
src/scraper/: http_scraper.rs  mock_scraper.rs  mod.rs  playwright.rs  request.rs  reqwest.rs  response.rs  retry.rs  retry_tests.rs  scraper.rs  tests.rs
src/scrapers/: http_scraper.rs  mock_scraper.rs  mod.rs  scraper.rs
src/stats/: mod.rs
src/storage/: base.rs  disk.rs  factory.rs  kafka.rs  manager.rs  mod.rs  mongo.rs  types.rs
