[package]
name = "turboscraper"
version = "0.1.1"
edition = "2021"
description = "A high-performance, concurrent web scraping framework for Rust with built-in support for retries, storage backends, and concurrent request handling"
license = "MIT"
homepage = "https://github.com/hakiour/turboscraper"
repository = "https://github.com/hakiour/turboscraper"
readme = "README.md"
keywords = ["scraping", "crawler", "spider", "web", "async"]
categories = ["web-programming", "asynchronous", "web-programming::http-client"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
futures = "0.3"
async-trait = "0.1.83"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
regex = "1.10"
uuid = { version = "1.6", features = ["v7"] }
mongodb = { version = "3.1.1" }
erased-serde = "0.4"
anyhow = "1.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["full"] }